--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/edit-activity/edit-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/edit-activity/edit-activity.component.html
@@ -130,7 +130,7 @@
 
     <div *ngIf="!toggleService.isShown(onCreateLoaderName) && !activity && !isOwner">
       <h4>This activity doesn't exist.</h4>
-      <a class="btn btn-outline-primary" routerLink="/activities" role="button">Back to activities</a>
+      <a class="btn btn-outline-primary" routerLink="/activities" role="button">Go to activities</a>
     </div>
   </div>
 
