--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -39,11 +39,15 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarActivitiesDropdownMenuLink">
             <a class="dropdown-item" routerLink="/activities">Activity feed</a>
+            <a class="dropdown-item" routerLink="/all-activities">Stats center</a>
             <a class="dropdown-item" routerLink="/add-activity">Add new activity</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/show-profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/profiles">Community</a>
         </li>
       </ul>
       <a class="btn btn-outline-light" routerLink="/sign-in">Log out</a>
