--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/show-activity/show-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/show-activity/show-activity.component.html
@@ -1,7 +1,7 @@
 <div class="mt-2 mx-3">
   <div class="jumbotron">
     <p class="lead">Activity {{ id }}</p>
-    <a class="btn btn-outline-primary" routerLink="/activities" role="button">Back to activities</a>
+    <a class="btn btn-outline-primary" routerLink="/activities" role="button">Go to activities</a>
   </div>
 
   <app-alerts></app-alerts>
