--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -47,7 +47,7 @@
           <a class="nav-link" routerLink="/show-profile">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/profiles">Community</a>
+          <a class="nav-link" routerLink="/profile-list">Community</a>
         </li>
       </ul>
       <a class="btn btn-outline-light" routerLink="/sign-in">Log out</a>
