--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/show-activity/show-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/show-activity/show-activity.component.html
@@ -69,12 +69,15 @@
           </div>
         </div>
 
-        <a *ngIf="isOwner" class="btn btn-outline-primary btn-sm btn-block mt-4" routerLink="/edit-activity/{{activity.id}}">
-          Edit
-        </a>
-        <a *ngIf="isOwner" class="btn btn-outline-danger btn-sm btn-block mt-4" routerLink="/remove-activity/{{activity.id}}">
-          Remove
-        </a>
+        <div *ngIf="isOwner">
+          <hr/>
+          <a class="btn btn-outline-primary btn-sm btn-block mt-4" routerLink="/edit-activity/{{activity.id}}">
+            Edit
+          </a>
+          <a class="btn btn-outline-danger btn-sm btn-block mt-1" routerLink="/remove-activity/{{activity.id}}">
+            Remove
+          </a>
+        </div>
       </div>
     </div>
   </div>
