--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/dashboard/dashboard.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/dashboard/dashboard.component.html
@@ -87,8 +87,7 @@
   </div>
 
   <div class="jumbotron">
-    <a class="btn btn-outline-primary btn-sm btn-block" routerLink="/add-activity">Add new activity</a>
-    <br/>
-    <a class="btn btn-outline-primary btn-sm btn-block" routerLink="/activities">Go to activity feed</a>
+    <a class="btn btn-primary btn-sm btn-block mb-1" routerLink="/add-activity">Add new activity</a>
+    <a class="btn btn-primary btn-sm btn-block" routerLink="/activities">Go to activity feed</a>
   </div>
 </div>
