--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/total-stats/total-stats.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/total-stats/total-stats.component.html
@@ -16,11 +16,11 @@
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="">Avg. speed</span>
-          <span class="">{{stat.averageSpeed | number:'1.2-2'}}</span>
+          <span class="">{{stat.averageSpeed | number:'1.2-2'}} km/h</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="">Avg. pace</span>
-          <span class="">{{converter.getPaceTimeString(stat.averagePace)}}</span>
+          <span class="">{{converter.getPaceTimeString(stat.averagePace)}} min/km</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           <span class="">Longest distance</span>
