Added stats center

--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarActivitiesDropdownMenuLink">
             <a class="dropdown-item" routerLink="/activities">Activity feed</a>
-            <a class="dropdown-item" routerLink="/all-activities">Stats center</a>
+            <a class="dropdown-item" routerLink="/stats-center">Stats center</a>
             <a class="dropdown-item" routerLink="/add-activity">Add new activity</a>
           </div>
         </li>
