--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/home/home.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/home/home.component.html
@@ -4,17 +4,18 @@
     <br/>
     <hr class="my-4">
     <br/>
-    <img src="../assets/cup.png">
+    <img src="../../assets/cup.png" alt="cup">
     <h1 class="display-4">Train like a champ!</h1>
-    <p class="lead"><a class="text-success" routerLink="/sign-up"><b>Sign up</b></a> to monitor your training progress and perform like a champion.</p>
+    <p class="lead"><a class="text-success" routerLink="/sign-up"><b>Sign up</b></a> to monitor your training progress
+      and perform like a champion.</p>
     <br/>
     <hr class="my-4">
     <br/>
-    <img src="../assets/bike.png" style="padding-right: 40px">
-    <img src="../assets/swim.png" style="padding-right: 40px">
-    <img src="../assets/run.png">
+    <img src="../../assets/bike.png" alt="bike" style="padding-right: 40px">
+    <img src="../../assets/swim.png" alt="swim" style="padding-right: 40px">
+    <img src="../../assets/run.png" alt="run">
     <h1 class="display-4">Multiple sports</h1>
-    <p class="lead">Add activities for multiple sports. With us you can ride, you can run, you can do whathever you
+    <p class="lead">Add activities for multiple sports. With us you can ride, you can run, you can do whatever you
       want.</p>
   </div>
 </div>
