--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/profile-list/profile-list.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/profile-list/profile-list.component.html
@@ -26,7 +26,8 @@
             <div>
               <img class="align-self-start mr-3 border rounded-circle border-primary" src="../../assets/profile.png"
                    alt="profile-picture"
-                   style="width: 24px; height: 24px; border-width:2px !important">{{account.name}} <span class="text-secondary font-weight-light">{{account.location === null || account.location == '' ? '' : '(' + account.location + ')'}}</span>
+                   style="width: 24px; height: 24px; border-width:2px !important">{{account.name}} <span
+              class="text-secondary font-weight-light">{{account.location === null || account.location == '' ? '' : '(' + account.location + ')'}}</span>
             </div>
             <span class="btn btn-sm btn-outline-primary">Profile</span>
           </a>
