--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/add-activity/add-activity.component.html
@@ -83,9 +83,12 @@
               <div class="form-group">
                 <div class="input-group">
                   <input class="form-control" placeholder="yyyy-mm-dd" [formControl]="datePickerCtrl"
-                         name="dp" [(ngModel)]="datePickerModel" ngbDatepicker [footerTemplate]="footerTemplate" #d="ngbDatepicker" required>
+                         name="dp" [(ngModel)]="datePickerModel" ngbDatepicker
+                         #d="ngbDatepicker" required>
                   <div class="input-group-append">
-                    <button class="btn btn-outline-primary" (click)="d.toggle()"><small>\/</small></button>
+                    <button class="btn btn-outline-primary" (click)="d.toggle()">
+                      <small>\/</small>
+                    </button>
                     <button class="btn btn-outline-primary" (click)="datePickerModel = today">Today</button>
                   </div>
                 </div>
