--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/alerts/alerts.component.css
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/alerts/alerts.component.css
@@ -29,10 +29,23 @@
 }
 
 @keyframes loading {
-  from {left: -200px; width: 30%;}
-  50% {width: 30%;}
-  70% {width: 70%;}
-  80% {left: 50%;}
-  95% {left: 120%;}
-  to {left: 100%;}
+  from {
+    left: -200px;
+    width: 30%;
+  }
+  50% {
+    width: 30%;
+  }
+  70% {
+    width: 70%;
+  }
+  80% {
+    left: 50%;
+  }
+  95% {
+    left: 120%;
+  }
+  to {
+    left: 100%;
+  }
 }
