--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/dashboard/dashboard.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,8 @@
           <div class="card">
             <div class="card-header" id="headingOne">
               <h5 class="mb-0">
-                <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <button class="btn btn-link text-dark" type="button" data-toggle="collapse" data-target="#collapseOne"
+                        aria-expanded="true" aria-controls="collapseOne">
                   <p class="lead">Time in hours</p>
                 </button>
               </h5>
@@ -26,8 +27,9 @@
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
               <div class="card-body">
                 <div class="col-lg-6" style="display: block; margin: auto;" align="center">
-                <app-period-chart [(ngModel)]="stats" [stats]="stats" statType="time" chartType="bar"
-                                  ngDefaultControl style="display: block; margin: auto;" align="center"></app-period-chart>
+                  <app-period-chart [(ngModel)]="stats" [stats]="stats" statType="time" chartType="bar"
+                                    ngDefaultControl style="display: block; margin: auto;"
+                                    align="center"></app-period-chart>
                 </div>
               </div>
             </div>
@@ -35,7 +37,8 @@
           <div class="card">
             <div class="card-header" id="headingTwo">
               <h5 class="mb-0">
-                <button class="btn btn-link text-dark collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link text-dark collapsed" type="button" data-toggle="collapse"
+                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   <p class="lead">Distance in km</p>
                 </button>
               </h5>
@@ -46,11 +49,11 @@
                   <app-period-chart [(ngModel)]="stats" [stats]="stats" statType="distance" chartType="line"
                                     ngDefaultControl></app-period-chart>
                 </div>
-                </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
   </div>
 
