--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/navbar/navbar.component.html
@@ -5,7 +5,8 @@
   <a *ngIf="isAuthenticated()" class="navbar-brand" routerLink="/dashboard">
     <b>{{title}}</b>
   </a>
-  <button name="toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+  <button name="toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,7 +34,8 @@
             Dashboard <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarActivitiesDropdownMenuLink" role="button" data-toggle="dropdown"
+          <a class="nav-link dropdown-toggle" href="#" id="navbarActivitiesDropdownMenuLink" role="button"
+             data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false">
             Activities
           </a>
