--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-up/sign-up.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/sign-up/sign-up.component.html
@@ -3,43 +3,48 @@
     <h1 class="display-5 text-info">Sign up</h1>
     <app-alerts></app-alerts>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label>Name</label>
-          <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
-          <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-            <div *ngIf="f.name.errors.required">Name is required</div>
-            <div *ngIf="f.name.errors.minlength">Name is too short</div>
-            <div *ngIf="f.name.errors.maxLength">Name is too long</div>
-          </div>
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" formControlName="name" class="form-control"
+               [ngClass]="{ 'is-invalid': submitted && f.name.errors }"/>
+        <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+          <div *ngIf="f.name.errors.required">Name is required</div>
+          <div *ngIf="f.name.errors.minlength">Name is too short</div>
+          <div *ngIf="f.name.errors.maxLength">Name is too long</div>
         </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-            <div *ngIf="f.email.errors.required">Email is required</div>
-            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
-            <div *ngIf="f.email.errors.maxLength">Email is too long</div>
-          </div>
+      </div>
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" formControlName="email" class="form-control"
+               [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+          <div *ngIf="f.email.errors.required">Email is required</div>
+          <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+          <div *ngIf="f.email.errors.maxLength">Email is too long</div>
         </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 5 characters</div>
-            <div *ngIf="f.password.errors.maxLength">Password is too long</div>
-          </div>
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" formControlName="password" class="form-control"
+               [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+          <div *ngIf="f.password.errors.required">Password is required</div>
+          <div *ngIf="f.password.errors.minlength">Password must be at least 5 characters</div>
+          <div *ngIf="f.password.errors.maxLength">Password is too long</div>
         </div>
-        <div class="form-group">
-          <label>Confirm Password</label>
-          <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-          <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-            <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-            <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match.</div>
-          </div>
+      </div>
+      <div class="form-group">
+        <label>Confirm Password</label>
+        <input type="password" formControlName="confirmPassword" class="form-control"
+               [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }"/>
+        <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+          <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+          <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match.</div>
         </div>
-        <button class="btn btn-success" type="submit">Sign up</button>
-        <small id="submitHelp" class="form-text text-primary">By clicking this button you agree on our terms of use.</small>
+      </div>
+      <button class="btn btn-success" type="submit">Sign up</button>
+      <small id="submitHelp" class="form-text text-primary">By clicking this button you agree on our terms of use.
+      </small>
     </form>
   </div>
 </div>
