Small home changes

--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/home/home.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/home/home.component.html
@@ -1,11 +1,10 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid text-center">
   <div class="container">
-    <h1 class="display-1 text-primary">Welcome to <b>Efforteo</b></h1>
-    <br/>
-    <hr class="my-4">
-    <br/>
+    <h2 class="display-3 text-primary"><b>Efforteo.</b></h2>
+    <h4 class="text-weight-light mt-1">Your training assistant</h4>
+    <hr class="my-5">
     <img src="../../assets/cup.png" alt="cup">
-    <h1 class="display-4">Train like a champ!</h1>
+    <h3 class="display-5">Train like a champ!</h3>
     <p class="lead"><a class="text-success" routerLink="/sign-up"><b>Sign up</b></a> to monitor your training progress
       and perform like a champion.</p>
     <br/>
@@ -14,7 +13,7 @@
     <img src="../../assets/bike.png" alt="bike" style="padding-right: 40px">
     <img src="../../assets/swim.png" alt="swim" style="padding-right: 40px">
     <img src="../../assets/run.png" alt="run">
-    <h1 class="display-4">Multiple sports</h1>
+    <h3 class="display-5">Multiple sports</h3>
     <p class="lead">Add activities for multiple sports. With us you can ride, you can run, you can do whatever you
       want.</p>
   </div>
