--- a/src/Efforteo.WebApp/efforteo-webapp/src/app/activities/activities.component.html
+++ b/src/Efforteo.WebApp/efforteo-webapp/src/app/activities/activities.component.html
@@ -11,6 +11,10 @@
       <h4>No activities to display.</h4>
       <p class="lead">Add new activities to explore trainings.</p>
     </div>
-    <app-brief-activity *ngFor='let activity of activities' [activity]="activity"></app-brief-activity>
+    <div class="row">
+      <div class="col-xl-10 offset-xl-1 px-xl-5">
+        <app-brief-activity *ngFor='let activity of activities' [activity]="activity"></app-brief-activity>
+      </div>
+    </div>
   </div>
 </div>
